# django-solapi

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: admin.md  auth.md  celery.md  installation.md  models.md
scripts/: install-hooks  pre-commit  pre-push
solapi_sms/: __init__.py  admin.py  apps.py  auth.py  client.py  exceptions.py  models.py  services.py  settings.py  signals.py  tasks.py  utils.py
solapi_sms/migrations/: 0001_initial.py  0002_rename_solapi_sms_phone_created_idx_solapi_sms__phone_52bd82_idx.py
solapi_sms/tasks/: __init__.py  base.py
solapi_sms/tasks/backends/: __init__.py  celery.py  django6.py  sync.py
solapi_sms/templatetags/: solapi_tags.py
tests/: settings.py  test_service.py  test_utils.py
