[project]
name = "django-solapi"
version = "0.1.0"
description = "Django SMS integration for SOLAPI (with logging, verification, admin, and Celery support)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Suhan Bae", email = "suhan@bae.sh" }
]
requires-python = ">=3.11"
keywords = ["django", "sms", "solapi", "korea"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=5.0",
    "solapi>=5.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[project.urls]
Homepage = "https://github.com/dobestan/django-solapi"
Repository = "https://github.com/dobestan/django-solapi"
Documentation = "https://github.com/dobestan/django-solapi#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solapi_sms"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
