[project]
name = "django-solapi"
version = "1.0.9"
description = "Django SMS integration for SOLAPI (with logging, verification, admin, Django 6 Tasks and Celery support)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Suchan An", email = "dobestan@gmail.com" }
]
requires-python = ">=3.14"
keywords = ["django", "sms", "solapi", "korea", "tasks", "celery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "django>=6.0",
    "solapi>=5.0.2",
]

[project.optional-dependencies]
celery = ["celery>=5.0"]

[project.urls]
Homepage = "https://github.com/dobestan/django-solapi"
Repository = "https://github.com/dobestan/django-solapi"
Documentation = "https://github.com/dobestan/django-solapi#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solapi_sms"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.10",
]

# ============================================================
# Type Checking Configuration (mypy + django-stubs)
# ============================================================

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Django plugin
plugins = ["mypy_django_plugin.main"]

# Package-specific settings
[[tool.mypy.overrides]]
module = "solapi_sms.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

# Third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "solapi.*",
]
ignore_missing_imports = true

# Admin modules (Django admin typing is complex)
[[tool.mypy.overrides]]
module = "solapi_sms.admin"
disable_error_code = ["type-arg"]

# Test files can be less strict
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.django-stubs]
django_settings_module = "tests.settings"

# ============================================================
# Ruff Configuration
# ============================================================

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Allow unused variables in tests (intentional calls)
